# gdregistry

./: CMakeLists.txt  LICENSE.md  README.md  gdlib.cpp  gdnativedef.hpp  gdregistry.cpp  gdregistry.hpp  version.txt
include/: gdregistry.hpp  version.hpp.in
src/: gdregistry.cpp
